Kubernetes/ingressControllerNginxParte2/ingress1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-service1-tls
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  tls:
    - hosts:
        - myservice1.videocursoscloud.co.uk
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: tls-secret-service1
  rules:
    - host: myservice1.videocursoscloud.co.uk
      http:
        paths:
          - path: /
            backend:
              # This assumes http-svc exists and routes to healthy endpoints
              serviceName: servicio1
              servicePort: 80
