Kubernetes/ingressControllerNginxParte2/ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-service2-tls
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  tls:
    - hosts:
        - myservice2.videocursoscloud.co.uk
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: tls-secret-service2
  rules:
    - host: myservice2.videocursoscloud.co.uk
      http:
        paths:
          - path: /
            backend:
              # This assumes http-svc exists and routes to healthy endpoints
              serviceName: servicio2
              servicePort: 80
